--- a/.envrc.example
+++ b/.envrc.example
@@ -6,5 +6,8 @@
 # Database connection string for the development database.
 export CRDS_DEV_STORAGE_DSN=postgres://crds-dev-doc:CHANGEME@localhost/crds-dev-doc?sslmode=disable
 
-# Uncomment the line below to enable development mode, e.g., live reloading templates.
+# Set to "true" to enable development mode, e.g., live reloading templates; defaults to empty (production mode).
 # export IS_DEV=true
+
+# Set to one of "debug", "info", "warn", or "error"; defaults to "info".
+# export LOG_LEVEL=debug
